Add healthy eats info

--- a/pages/healthy-eats.html
+++ b/pages/healthy-eats.html
@@ -26,9 +26,298 @@
         </div>
     </header>
 
+    <!-- check this again -->
     <main>
         <section>
+            <div>
+                <h1>Healthy Eats</h1>
+            </div>
+        </section>
 
+        <section>
+            <div>
+                <div>
+                    <h2>My Process</h2>
+                </div>
+
+                <!-- overview -->
+                <div>
+                    <div>
+                        <h2>Overview</h2>
+                    </div>
+
+                    <div>
+                        <p>
+                            The aim is for users to research new meal recipes on the web app so they can follow along
+                            and attempt cooking them. It provides the means to find a selection of healthy recipes, with
+                            an ingredient list and a list of instructions. This web app has been designed for adults,
+                            over 18 years old, who enjoy cooking at home because they want control over the type of
+                            healthy meals they consume.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- overall process stages -->
+                <div>
+                    <div>
+                        <h2>Overall process stages</h2>
+                    </div>
+
+                    <!-- objective -->
+                    <div>
+                        <div>
+                            <h3>Objective</h3>
+                        </div>
+
+                        <div>
+                            <p>
+                                To design a responsive recipe web app where users can search for healthy meals and
+                                access their ingredient’s list and cooking instructions.
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- low fi -->
+                    <div>
+                        <div>
+                            <h3>Low-fi wireframes</h3>
+                        </div>
+
+                        <div>
+                            <p>
+                                Balsamiq Wireframes was used to arrange the placement of different components and
+                                elements used for each page.
+                            </p>
+                        </div>
+
+                        <div>
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/low-fi/big-screens/1-home.png">
+                                <img src="../img/healthy-eats/low-fi/small-screens/1-home.png"
+                                    alt="Healthy Eats 'home' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/low-fi/big-screens/2-search-results.png">
+                                <img src="../img/healthy-eats/low-fi/small-screens/2-search-results.png"
+                                    alt="Healthy Eats 'search results' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/low-fi/big-screens/3-ingredients.png">
+                                <img src="../img/healthy-eats/low-fi/small-screens/3-ingredients.png"
+                                    alt="Healthy Eats 'ingredients' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/low-fi/big-screens/4-cooking-instructions.png">
+                                <img src="../img/healthy-eats/low-fi/small-screens/4-cooking-instructions.png"
+                                    alt="Healthy Eats 'cooking instructions' low fidelity wireframe.">
+                            </picture>
+                        </div>
+                    </div>
+
+                    <!-- mid fi -->
+                    <div>
+                        <div>
+                            <h3>Mid-fi wireframes</h3>
+                        </div>
+
+                        <div>
+                            <p>
+                                Figma was used to edit the arrangement of the selected components and elements used for
+                                each page. Real text was added to buttons, titles, sub-headings, paragraph sections,
+                                etc.
+                            </p>
+                        </div>
+
+                        <div>
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/mid-fi/big-screens/1-home.png">
+                                <img src="../img/healthy-eats/mid-fi/small-screens/1-home.png"
+                                    alt="Healthy Eats 'home' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/mid-fi/big-screens/2-search-results.png">
+                                <img src="../img/healthy-eats/mid-fi/small-screens/2-search-results.png"
+                                    alt="Healthy Eats 'search results' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/mid-fi/big-screens/3-ingredients.png">
+                                <img src="../img/healthy-eats/mid-fi/small-screens/3-ingredients.png"
+                                    alt="Healthy Eats 'ingredients' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/mid-fi/big-screens/4-cooking-instructions.png">
+                                <img src="../img/healthy-eats/mid-fi/small-screens/4-cooking-instructions.png"
+                                    alt="Healthy Eats 'cooking instructions' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/mid-fi/big-screens/5-login.png">
+                                <img src="../img/healthy-eats/mid-fi/small-screens/5-login.png"
+                                    alt="Healthy Eats 'login' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/mid-fi/big-screens/6-sign-up.png">
+                                <img src="../img/healthy-eats/mid-fi/small-screens/6-sign-up.png"
+                                    alt="Healthy Eats 'sign up' mid fidelity wireframe.">
+                            </picture>
+                        </div>
+                    </div>
+
+                    <!-- hi fi -->
+                    <div>
+                        <div>
+                            <h3>Hi-fi wireframes</h3>
+                        </div>
+
+                        <div>
+                            <p>
+                                Figma was used to add colour to the wireframes, using a colour scheme from the style
+                                guide. The style guide's typography was also applied at this stage.
+                            </p>
+                        </div>
+
+                        <div>
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/1-home.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/1-home.png"
+                                    alt="Healthy Eats 'home' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/2-search-results.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/2-search-resutls.png"
+                                    alt="Healthy Eats '2-search-results' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/3-ingredients.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/3-ingredients.png"
+                                    alt="Healthy Eats 'ingredients' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/4-instructions">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/4-instructions"
+                                    alt="Healthy Eats 'instructions' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/5-login.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/5-login.png"
+                                    alt="Healthy Eats 'login' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/6-signup.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/6-signup.png"
+                                    alt="Healthy Eats 'signup' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/7-no-search-results.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/7-no-search-results.png"
+                                    alt="Healthy Eats 'no search results' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/8-404-error.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/8-404-error.png"
+                                    alt="Healthy Eats '404 error' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/9-login-error.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/9-login-error.png"
+                                    alt="Healthy Eats 'login error' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/10-signup-error.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/10-signup-error.png"
+                                    alt="Healthy Eats 'signup error' hi fidelity wireframe.">
+                            </picture>
+                        </div>
+                    </div>
+
+                    <!-- mockups -->
+                    <div>
+                        <div>
+                            <h3>Mockups</h3>
+                        </div>
+
+                        <div>
+                            <p>
+                                These mockups illustrate that this web app design is responsive. They show how they look
+                                on different screen sizes on various devices. These devices include: mobile phones,
+                                tablets and desktop screens.
+                            </p>
+                        </div>
+
+                        <div>
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/mockups/big-screens/ingredients.png">
+                                <img src="../img/healthy-eats/mockups/small-screens/ingredients.png"
+                                    alt="Healthy Eats 'ingredients' mockups">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/mockups/big-screens/search-results.png">
+                                <img src="../img/healthy-eats/mockups/small-screens/search-results.png"
+                                    alt="Healthy Eats 'search results' mockups">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/mockups/big-screens/signup.png">
+                                <img src="../img/healthy-eats/mockups/small-screens/signup.png"
+                                    alt="Healthy Eats 'signup' mockups">
+                            </picture>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- conclusion -->
+                <div>
+                    <div>
+                        <h2>Conclusion</h2>
+                    </div>
+
+                    <div>
+                        <p>
+                            The recipe web app was successfully designed. Users can easily search for healthy meals and find their ingredients list and cooking instructions. Improving on the design to attract over 18 year olds was also a success as user feedback from this demographic was collected and applied onto the web app designs.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
@@ -48,8 +337,10 @@
                 <ul>
                     <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="https://dribbble.com" target="_blank"><i class="fa-brands fa-dribbble"></i></a></li>
-                    <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="https://www.behance.net" target="_blank"><i class="fa-brands fa-square-behance"></i></a></li>
+                    <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    </li>
+                    <li><a href="https://www.behance.net" target="_blank"><i
+                                class="fa-brands fa-square-behance"></i></a></li>
                 </ul>
             </div>
 
