Add outline content for page

--- a/pages/frugalityfirst.html
+++ b/pages/frugalityfirst.html
@@ -28,7 +28,143 @@
 
     <main>
         <section>
+            <div>
+                <h1>FrugalityFirst</h1>
+            </div>
+        </section>
 
+        <section>
+            <div>
+                <div>
+                    <h2>My Process</h2>
+                </div>
+
+                <!-- overview -->
+                <div>
+                    <div>
+                        <h2>Overview</h2>
+                    </div>
+
+                    <div>
+                        <p>
+                            #
+                        </p>
+                    </div>
+                </div>
+
+                <!-- overall process stages -->
+                <div>
+                    <div>
+                        <h2>Overall process stages</h2>
+                    </div>
+
+                    <!-- objective -->
+                    <div>
+                        <div>
+                            <h3>Objective</h3>
+                        </div>
+
+                        <div>
+                            <p>
+                                #
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- low fi -->
+                    <div>
+                        <div>
+                            <h3>Low-fi wireframes</h3>
+                        </div>
+
+                        <div>
+                            <p>
+                                #
+                            </p>
+                        </div>
+
+                        <div>
+                            <picture>
+                                <source media="(min-width:992px)" srcset="../img/#/low-fi/big-screens/#">
+                                <img src="../img/#/low-fi/small-screens/#" alt="# 'login' low fidelity wireframe.">
+                            </picture>
+                        </div>
+                    </div>
+
+                    <!-- mid fi -->
+                    <div>
+                        <div>
+                            <h3>Mid-fi wireframes</h3>
+                        </div>
+
+                        <div>
+                            <p>
+                                #
+                            </p>
+                        </div>
+
+                        <div>
+                            <picture>
+                                <source media="(min-width:992px)" srcset="../img/#/mid-fi/big-screens/#">
+                                <img src="../img/#/mid-fi/small-screens/#" alt="# 'login' mid fidelity wireframe.">
+                            </picture>
+                        </div>
+                    </div>
+
+                    <!-- hi fi -->
+                    <div>
+                        <div>
+                            <h3>Hi-fi wireframes</h3>
+                        </div>
+
+                        <div>
+                            <p>
+                                #
+                            </p>
+                        </div>
+
+                        <div>
+                            <picture>
+                                <source media="(min-width:992px)" srcset="../img/#/hi-fi/big-screens/#">
+                                <img src="../img/#/hi-fi/small-screens/#" alt="# 'login' hi fidelity wireframe.">
+                            </picture>
+                        </div>
+                    </div>
+
+                    <!-- mockups -->
+                    <div>
+                        <div>
+                            <h3>Mockups</h3>
+                        </div>
+
+                        <div>
+                            <p>
+                                #
+                            </p>
+                        </div>
+
+                        <div>
+                            <picture>
+                                <source media="(min-width:992px)" srcset="../img/#/mockups/big-screens/#">
+                                <img src="../img/#/mockups/small-screens/#" alt="# 'image product' mockups">
+                            </picture>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- conclusion -->
+                <div>
+                    <div>
+                        <h2>Conclusion</h2>
+                    </div>
+
+                    <div>
+                        <p>
+                            #
+                        </p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
@@ -48,8 +184,10 @@
                 <ul>
                     <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="https://dribbble.com" target="_blank"><i class="fa-brands fa-dribbble"></i></a></li>
-                    <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="https://www.behance.net" target="_blank"><i class="fa-brands fa-square-behance"></i></a></li>
+                    <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    </li>
+                    <li><a href="https://www.behance.net" target="_blank"><i
+                                class="fa-brands fa-square-behance"></i></a></li>
                 </ul>
             </div>
 
