Add text to frugalityfirst page

--- a/pages/frugalityfirst.html
+++ b/pages/frugalityfirst.html
@@ -47,7 +47,10 @@
 
                     <div>
                         <p>
-                            #
+                            This project is about providing users with a guide to save money quickly and cover the cost
+                            of a big expenditure. It includes designed screens showcasing an overview of the user's
+                            finances. As well as features allowing users to state when their saving goal is and how long
+                            they have to achieve it. It also notifies and rewards users when a saving goal has been met.
                         </p>
                     </div>
                 </div>
@@ -66,7 +69,9 @@
 
                         <div>
                             <p>
-                                #
+                                To design a money saving app to help users save money for purchasing a large
+                                expenditure. Also, to provide users feedback regarding their finances. In addition, the
+                                app is to help users be more cautious with their financial information.
                             </p>
                         </div>
                     </div>
@@ -79,7 +84,8 @@
 
                         <div>
                             <p>
-                                #
+                                Balsamiq Wireframes was used to arrange the placement of different components and
+                                elements used for each page.
                             </p>
                         </div>
 
@@ -99,7 +105,9 @@
 
                         <div>
                             <p>
-                                #
+                                Figma was used to edit the arrangement of the selected components and elements used for
+                                each page. Real text was added to buttons, titles, sub-headings, paragraph sections,
+                                etc.
                             </p>
                         </div>
 
@@ -119,7 +127,8 @@
 
                         <div>
                             <p>
-                                #
+                                Figma was used to add colour to the wireframes, using a colour scheme from the style
+                                guide. The style guide's typography was also applied at this stage.
                             </p>
                         </div>
 
@@ -139,7 +148,9 @@
 
                         <div>
                             <p>
-                                #
+                                These mockups illustrate that this web app design is responsive. They show how they look
+                                on different screen sizes on various devices. These devices include: mobile phones,
+                                tablets and desktop screens.
                             </p>
                         </div>
 
@@ -160,7 +171,10 @@
 
                     <div>
                         <p>
-                            #
+                            This app design provides screens that help users save money for purchasing costly items. It
+                            allows users to enter a time period they want for saving money and rewards them with a
+                            message once they meet their saving goal. As a result, this app helps users be more cautious
+                            with their financial information.
                         </p>
                     </div>
                 </div>
