Add images to page

--- a/pages/frugalityfirst.html
+++ b/pages/frugalityfirst.html
@@ -91,8 +91,52 @@
 
                         <div>
                             <picture>
-                                <source media="(min-width:992px)" srcset="../img/#/low-fi/big-screens/#">
-                                <img src="../img/#/low-fi/small-screens/#" alt="# 'login' low fidelity wireframe.">
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/low-fi/big-screens/1-welcome.png">
+                                <img src="../img/frugalityfirst/low-fi/small-screens/1-welcome.png"
+                                    alt="FrugalityFirst 'welcome' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/low-fi/big-screens/2-login.png">
+                                <img src="../img/frugalityfirst/low-fi/small-screens/2-login.png"
+                                    alt="FrugalityFirst 'login' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/low-fi/big-screens/3-home.png">
+                                <img src="../img/frugalityfirst/low-fi/small-screens/3-home.png"
+                                    alt="FrugalityFirst 'home' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/low-fi/big-screens/4-your-goals.png">
+                                <img src="../img/frugalityfirst/low-fi/small-screens/4-your-goals.png"
+                                    alt="FrugalityFirst 'your goals' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/low-fi/big-screens/5-create-new-goal.png">
+                                <img src="../img/frugalityfirst/low-fi/small-screens/5-create-new-goal.png"
+                                    alt="FrugalityFirst 'create new goal' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/low-fi/big-screens/6-specific-goal.png">
+                                <img src="../img/frugalityfirst/low-fi/small-screens/6-specific-goal.png"
+                                    alt="FrugalityFirst 'specific goal' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/low-fi/big-screens/7-your-goals-custom.png">
+                                <img src="../img/frugalityfirst/low-fi/small-screens/7-your-goals-custom.png"
+                                    alt="FrugalityFirst 'your goals custom' low fidelity wireframe.">
                             </picture>
                         </div>
                     </div>
@@ -113,9 +157,61 @@
 
                         <div>
                             <picture>
-                                <source media="(min-width:992px)" srcset="../img/#/mid-fi/big-screens/#">
-                                <img src="../img/#/mid-fi/small-screens/#" alt="# 'login' mid fidelity wireframe.">
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/mid-fi/big-screens/1-welcome.png">
+                                <img src="../img/frugalityfirst/mid-fi/small-screens/1-welcome.png"
+                                    alt="FrugalityFirst 'welcome' mid fidelity wireframe.">
                             </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/mid-fi/big-screens/2-login.png">
+                                <img src="../img/frugalityfirst/mid-fi/small-screens/2-login.png"
+                                    alt="FrugalityFirst 'login' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/mid-fi/big-screens/3-home.png">
+                                <img src="../img/frugalityfirst/mid-fi/small-screens/3-home.png"
+                                    alt="FrugalityFirst 'home' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/mid-fi/big-screens/4-your-goals-default.png">
+                                <img src="../img/frugalityfirst/mid-fi/small-screens/4-your-goals-default.png"
+                                    alt="FrugalityFirst 'your goals default' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/mid-fi/big-screens/5-create-new-goal-default.png">
+                                <img src="../img/frugalityfirst/mid-fi/small-screens/5-create-new-goal-default.png"
+                                    alt="FrugalityFirst 'create new goal default' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/mid-fi/big-screens/6-create-new-goal-custom-filled.png">
+                                <img src="../img/frugalityfirst/mid-fi/small-screens/6-create-new-goal-custom-filled.png"
+                                    alt="FrugalityFirst 'create new goal custom filled' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/mid-fi/big-screens/7-specific-goal.png">
+                                <img src="../img/frugalityfirst/mid-fi/small-screens/7-specific-goal.png"
+                                    alt="FrugalityFirst 'specific goal' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/mid-fi/big-screens/8-your-goals-custom-filled.png">
+                                <img src="../img/frugalityfirst/mid-fi/small-screens/8-your-goals-custom-filled.png"
+                                    alt="FrugalityFirst 'your goals custom filled' mid fidelity wireframe.">
+                            </picture>
+
                         </div>
                     </div>
 
@@ -134,8 +230,66 @@
 
                         <div>
                             <picture>
-                                <source media="(min-width:992px)" srcset="../img/#/hi-fi/big-screens/#">
-                                <img src="../img/#/hi-fi/small-screens/#" alt="# 'login' hi fidelity wireframe.">
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/hi-fi/big-screens/1-welcome.png">
+                                <img src="../img/frugalityfirst/hi-fi/small-screens/1-welcome.png"
+                                    alt="FrugalityFirst 'welcome' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/hi-fi/big-screens/2-login.png">
+                                <img src="../img/frugalityfirst/hi-fi/small-screens/2-login.png"
+                                    alt="FrugalityFirst 'login' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/hi-fi/big-screens/3-home.png">
+                                <img src="../img/frugalityfirst/hi-fi/small-screens/3-home.png"
+                                    alt="FrugalityFirst 'home' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/hi-fi/big-screens/4-your-goals-empty.png">
+                                <img src="../img/frugalityfirst/hi-fi/small-screens/4-your-goals-empty.png"
+                                    alt="FrugalityFirst 'your goals empty' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/hi-fi/big-screens/5-create-new-goal-empty.png">
+                                <img src="../img/frugalityfirst/hi-fi/small-screens/5-create-new-goal-empty.png"
+                                    alt="FrugalityFirst 'create new goal empty' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/hi-fi/big-screens/6-create-new-goal-filled.png">
+                                <img src="../img/frugalityfirst/hi-fi/small-screens/6-create-new-goal-filled.png"
+                                    alt="FrugalityFirst 'create new goal filled' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/hi-fi/big-screens/7-specific-goal.png">
+                                <img src="../img/frugalityfirst/hi-fi/small-screens/7-specific-goal.png"
+                                    alt="FrugalityFirst 'specific goal' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/hi-fi/big-screens/8-your-goals-filled.png">
+                                <img src="../img/frugalityfirst/hi-fi/small-screens/8-your-goals-filled.png"
+                                    alt="FrugalityFirst 'your goals filled' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/hi-fi/big-screens/9-specific-goal-achieved.png">
+                                <img src="../img/frugalityfirst/hi-fi/small-screens/9-specific-goal-achieved.png"
+                                    alt="FrugalityFirst 'specific goal achieved' mid fidelity wireframe.">
                             </picture>
                         </div>
                     </div>
@@ -156,8 +310,24 @@
 
                         <div>
                             <picture>
-                                <source media="(min-width:992px)" srcset="../img/#/mockups/big-screens/#">
-                                <img src="../img/#/mockups/small-screens/#" alt="# 'image product' mockups">
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/mockups/big-screens/create-new-goal-(filled)-laptop.png">
+                                <img src="../img/frugalityfirst/mockups/small-screens/create-new-goal-(filled)-laptop.png"
+                                    alt="FrugalityFirst 'create new goal (filled)' mockup">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/mockups/big-screens/home-tablet.png">
+                                <img src="../img/frugalityfirst/mockups/small-screens/home-tablet.png"
+                                    alt="FrugalityFirst 'home tablet' mockup">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/frugalityfirst/mockups/big-screens/login-mobile.png">
+                                <img src="../img/frugalityfirst/mockups/small-screens/login-mobile.png"
+                                    alt="FrugalityFirst 'login mobile' mockup">
                             </picture>
                         </div>
                     </div>
